@@ -8,16 +8,14 @@ import javafx.stage.Stage;
 import javafx.stage.Window;
 
 import java.io.IOException;
-import java.util.Objects;
 
 public class SceneController {
 
-    Image Icon = new Image(Objects.requireNonNull(getClass().getResourceAsStream("/Kelinci.png")));
-    private final String DASHBOARD_LINK = "/com/example/emuyhealthcare/DashBoard1.fxml";
+    Image Icon = new Image(getClass().getResourceAsStream("/Kelinci.png"));
+    private final String DASHBOARD_LINK = "/com/example/emuyhealthcare/DashBoard.fxml";
     private final String LOGIN_PAGE = "/com/example/emuyhealthcare/LoginPage.fxml";
     private final String CHATBOT_LINK = "/com/example/emuyhealthcare/chatBot.fxml";
     Stage stage;
-
 
 
     //Constructor injection
@@ -25,39 +23,35 @@ public class SceneController {
     public SceneController(Stage stage) {
         this.stage = stage;
     }
-    public SceneController(){}
+    public SceneController(){};
 
     //Method For Building New Window
     public void BuildWindow(String Url){
         try {
-            Parent Load = FXMLLoader.load(Objects.requireNonNull(getClass().getResource(Url)));
+            Parent Load = FXMLLoader.load(getClass().getResource(Url));
+            stage.centerOnScreen();
             stage.setScene(new Scene(Load));
             stage.setTitle("Emuy HealthCare");
             stage.getIcons().add(Icon);
-            System.out.println("Berhasil Menampilkan Layar");
-            stage.centerOnScreen();
             stage.show();
 
         } catch (IOException e) {
-            System.err.println("Pesan Eror : " + e.getMessage());
-            System.out.println("Tidak Berhasil Menampilkan Layar");
+            throw new RuntimeException(e);
         }
     }
 
     //Method For ChangeScene
     public void SceneChange(String Url){
         try {
-            Parent Loader = FXMLLoader.load(Objects.requireNonNull(getClass().getResource(Url)));
-            stage = (Stage) Window.getWindows().filtered(Window::isShowing).getFirst();
+            Parent Loader = FXMLLoader.load(getClass().getResource(Url));
+            stage = (Stage) Window.getWindows().filtered(Window::isShowing).get(0);
+            stage.centerOnScreen();
             stage.setScene(new Scene(Loader));
             stage.setTitle("Emuy HealthCare");
             stage.getIcons().add(Icon);
-            System.out.println("Berhasil Menampilkan Layar");
-            stage.centerOnScreen();
             stage.show();
         }catch (IOException e){
-            System.out.println("Tidak Berhasil Menampilkan Layar");
-            System.err.println("Pesan Eror : "+ e.getMessage());
+
         }
     }
 
